crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__ui_search_no_results.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌FEC RSS Feed──────────────────────────────────────────────────────────────────┐"
"│FEC Electronic Filing RSS Feed  Data: 0 seconds ago                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"/zzzzz█                                                                         "
"┌Recent Filings (0 of 3)───────────────────────────────────────────────────────┐"
"│Committee                                Form   Report    Filing ID  Age      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"Next refresh: M:SS  │  q quit  r refresh  ↑↓/gg/G nav  Enter open  y copy  / sea"
"                    https://efilingapps.fec.gov/rss/generate                    "
