crates/fec-cli/src/commands/rss/snapshots/libfec__commands__rss__render__tests__ui_with_pending_exports.snap
---
source: crates/fec-cli/src/commands/rss/render.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌FEC RSS Feed──────────────────────────────────────────────────────────────────┐"
"│FEC Electronic Filing RSS Feed  Data: 0 seconds ago                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Recent Filings (3)────────────────────────────────────────────────────────────┐"
"│   Committee                                Form   Report   Filing ID Age     │"
"│>> ACTBLUE - Form F3X                       F3X    M2       1234567   -       │"
"│   BIDEN FOR PRESIDENT - Form F3P           F3P    Q1       1234568   -       │"
"│   DSCC - Form F3X                          F3X    YE       1234569   -       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"⟳ Exporting 2/5  │  Next refresh: M:SS  │  q quit  r refresh  ↑↓/gg/G nav  Enter"
"                    https://efilingapps.fec.gov/rss/generate                    "
